# Minecraft-Mod-Translator

./: .env.example  .gitignore  AGENTS.md  README-uk.md  README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in
scripts/: compile.bat  compile.sh  setup.bat  setup.sh  start.bat  start.sh
src/app/: __init__.py  __main__.py  logging_config.py
src/app/commands/: __init__.py  app.py  command_line.py  translate.py
src/app/core/: config_loader.py  file_manager.py  mod_scanner.py  openai_check.py  provider_check.py  settings.py  translator.py
src/app/data/: __init__.py
src/app/parsers/: json_parser.py  lang_parser.py  mcfunction_parser.py
src/app/services/: base_translator.py  factory.py  google_service.py  google_translate.py  litellm_service.py  openai_compatible_service.py  openai_service.py  openai_translate.py
src/app/utils/: progress.py  retry_logic.py
tests/: conftest.py  test_app.py  test_command_line_extended.py  test_config_loader.py  test_data.py  test_file_manager.py  test_file_manager_extended.py  test_google_translate_service.py  test_json_parser_edge.py  test_lang_parser_edge.py  test_logging_config.py  test_main_entry.py  test_mcfunction_parser_edge.py  test_mod_scanner.py  test_openai_check.py  test_openai_compatible_service.py  test_openai_translate_service.py  test_progress_extended.py  test_retry_logic.py  test_settings.py  test_settings_extended.py  test_stats.py  test_translate_orchestrator.py  test_translator.py  test_version.py
