[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mod-translator"
version = "1.0.0"
description = "Minecraft Mod Translator - A tool for translating Minecraft mod files between languages."
requires-python = ">=3.10"
license = {text = "CC BY-NC 4.0"}
readme = "README.md"
authors = [
    {name = "zvictorium"},
]

dependencies = [
    "deep-translator>=1.9.0",
    "rich>=12.0.0",
    "questionary>=1.10.0",
    "pyfiglet>=0.8.post1",
]

[project.optional-dependencies]
ai = [
    "openai>=1.0.0",
    "python-dotenv>=0.19.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "mypy>=1.10",
    "ruff>=0.6",
]
build = [
    "pyinstaller>=6.0",
]

[project.scripts]
mod-translator = "app.commands.command_line:main"
mod-translator-app = "app.commands.app:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]


